--- a/src/app/modules/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
@@ -1,4 +1,4 @@
-<form role="form" class="form" [formGroup]="form">
+<form role="form" class="form" [formGroup]="form" (ngSubmit)="emitOnSubmit()">
   <datalist id="transactions">
     <option
       *ngFor="let transaction of transactions"
@@ -55,5 +55,5 @@
       autocomplete="off"
     />
   </div>
-  <input type="submit" class="sr-only" />
+  <input type="submit" value="submit" class="sr-only" />
 </form>
