--- a/src/app/modules/shared/components/sidebar/sidebar.component.html
+++ b/src/app/modules/shared/components/sidebar/sidebar.component.html
@@ -2,13 +2,13 @@
   class="fixed w-[24rem] top-16 right-0 bottom-0 bg-white drop-shadow-xl py-5 px-5 ease-in duration-200 grid grid-rows-[40px_1fr_128px]"
   [ngClass]="{ 'translate-x-full': !showSideBar() }"
 >
-  <header class="mb-3">
+  <header class="mb-3 relative z-50">
     <h4 class="text-2xl text-gray-700 font-medium">
       {{ headline }}
     </h4>
     <div class="divider my-3"></div>
   </header>
-  <div class="overflow-y-auto pt-5 pb-7 px-3">
+  <div class="overflow-y-auto pt-5 pb-7 px-3 relative z-40">
     <ng-content></ng-content>
   </div>
   <div class="flex flex-col items-center gap-3">
