--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/cash-register-details-modal/cash-register-details-modal.component.html
@@ -36,5 +36,6 @@
     <app-detailed-expenses-table *ngIf="selectedType() === 'EXPENSES'" />
     <app-detailed-discounts-table *ngIf="selectedType() === 'DISCOUNTS'" />
     <app-detailed-transfers-table *ngIf="selectedType() === 'TRANSFERS'" />
+    <app-detailed-change-logs-table *ngIf="selectedType() === 'CHANGES'" />
   </div>
 </dialog>
