--- a/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/detailed-change-logs-table/detailed-change-logs-table.component.html
+++ b/src/app/modules/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/detailed-change-logs-table/detailed-change-logs-table.component.html
@@ -1,1 +1,5 @@
-<app-custom-table [table]="table" />
+<ng-template #tableData><app-custom-table [table]="table" /></ng-template>
+<app-detailed-change-logs
+  *ngIf="selectedLog(); else tableData"
+  [changeLog]="selectedLog()"
+/>
