update: portal home layout

--- a/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
-  <section class="card">
+  <section class="home-form">
     <h2 class="home-subtitle">Nueva Transacción</h2>
     <app-new-transaction-form />
   </section>
