--- a/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
+++ b/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
-  <section class="card">
+  <section class="home-form">
     <h2 class="home-subtitle">Nuevo Gasto</h2>
     <app-new-expense-form />
   </section>
