--- a/src/styles.css
+++ b/src/styles.css
@@ -55,9 +55,13 @@ body {
 }
 
 .home-container {
-  @apply grid grid-cols-[20rem_minmax(33rem,_1fr)] gap-6 w-full;
+  @apply grid lg:grid-cols-[20rem_minmax(20rem,_1fr)] gap-6 w-full;
 }
 
 .home-subtitle {
   @apply font-medium text-2xl text-gray-700 mb-3;
+}
+
+.home-form {
+  @apply card w-full max-w-sm mx-auto self-start;
 }
