update: transactions to page. in progress: pagination

--- a/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
@@ -11,6 +11,8 @@
         (onEdit)="tableOnEdit($event)"
         (onRemove)="tableOnRemove($event)"
       />
+      <br />
+      <app-pagination [pagination]="pagination" />
     </div>
   </section>
 </div>
