update: logic to set the current page and load data from api

--- a/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
+++ b/src/app/modules/portal/pages/home/pages/transactions/transactions.component.html
@@ -12,7 +12,11 @@
         (onRemove)="tableOnRemove($event)"
       />
       <br />
-      <app-pagination [pagination]="pagination" />
+      <app-pagination
+        [loading]="paginationLoading()"
+        [pagination]="pagination"
+        (onSelectPage)="onSelectPage($event)"
+      />
     </div>
   </section>
 </div>
