add: pagination to portal home

--- a/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
+++ b/src/app/modules/portal/pages/home/pages/expenses/expenses.component.html
@@ -11,6 +11,12 @@
         (onEdit)="tableOnEdit($event)"
         (onRemove)="tableOnRemove($event)"
       />
+      <br />
+      <app-pagination
+        *ngIf="expenses().length > 0"
+        [pagination]="pagination"
+        [loading]="paginationLoading()"
+      />
     </div>
   </section>
 </div>
