--- a/src/app/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -25,7 +25,12 @@
   </div>
   <div class="control">
     <label for="cash-box">Cajas Disponibles</label>
-    <select id="cash-box" class="input" formControlName="cashier">
+    <select
+      id="cash-box"
+      class="input"
+      formControlName="cashier"
+      (change)="setSelectedCashBox($event)"
+    >
       <ng-container *ngIf="selectedType() === 'CASH_REGISTER'; else safes">
         <option [value]="0" disabled selected>Selecciona un cajero</option>
         <option
@@ -46,7 +51,10 @@
       </ng-template>
     </select>
   </div>
-  <div class="control">
+  <div
+    class="control"
+    *ngIf="selectedType() === 'CASH_REGISTER'; else safeValue"
+  >
     <label for="value">Valor</label>
     <input
       type="number"
@@ -54,28 +62,88 @@
       class="input"
       placeholder="$0"
       formControlName="value"
-      *ngIf="selectedType() === 'CASH_REGISTER'"
     />
-    <select
-      id="value"
-      class="input"
-      *ngIf="selectedType() === 'SAFE'"
-      formControlName="safeValue"
-    >
-      <option value="" disabled selected>Selecciona un monto</option>
-      <option value="hundredThousand">$10.000.000</option>
-      <option value="fiftyThousand">$5.000.000</option>
-      <option value="twentyThousand">$2.000.000</option>
-      <option value="tenThousand">$1.000.000</option>
-      <option value="fiveThousand">$500.000</option>
-      <option value="twoThousand">$200.000</option>
-      <option value="thousand">$100.000</option>
-      <option value="fiveHundred">$50.000</option>
-      <option value="twoHundred">$20.000</option>
-      <option value="thousand">$10.000</option>
-      <option value="fifty">$5.000</option>
-    </select>
   </div>
+  <ng-template #safeValue>
+    <div class="grid grid-cols-3 gap-3">
+      <div class="control col-span-1">
+        <label for="safeAmount">Cantidad</label>
+        <input type="number" id="safeAmount" class="input" placeholder="0" />
+      </div>
+      <div class="control col-span-2">
+        <label for="value">Valor</label>
+        <select id="value" class="input" formControlName="safeValue">
+          <option value="" disabled selected>Denominación</option>
+          <option
+            value="hundredThousand"
+            [disabled]="receive() && selectedSafeBase()?.hundredThousand === 0"
+          >
+            $100.000
+          </option>
+          <option
+            value="fiftyThousand"
+            [disabled]="receive() && selectedSafeBase()?.fiftyThousand === 0"
+          >
+            $50.000
+          </option>
+          <option
+            value="twentyThousand"
+            [disabled]="receive() && selectedSafeBase()?.twentyThousand === 0"
+          >
+            $20.000
+          </option>
+          <option
+            value="tenThousand"
+            [disabled]="receive() && selectedSafeBase()?.tenThousand === 0"
+          >
+            $10.000
+          </option>
+          <option
+            value="fiveThousand"
+            [disabled]="receive() && selectedSafeBase()?.fiveThousand === 0"
+          >
+            $5.000
+          </option>
+          <option
+            value="twoThousand"
+            [disabled]="receive() && selectedSafeBase()?.twoThousand === 0"
+          >
+            $2.000
+          </option>
+          <option
+            value="thousand"
+            [disabled]="receive() && selectedSafeBase()?.thousand === 0"
+          >
+            $1.000
+          </option>
+          <option
+            value="fiveHundred"
+            [disabled]="receive() && selectedSafeBase()?.fiveHundred === 0"
+          >
+            $500
+          </option>
+          <option
+            value="twoHundred"
+            [disabled]="receive() && selectedSafeBase()?.twoHundred === 0"
+          >
+            $200
+          </option>
+          <option
+            value="thousand"
+            [disabled]="receive() && selectedSafeBase()?.thousand === 0"
+          >
+            $100
+          </option>
+          <option
+            value="fifty"
+            [disabled]="receive() && selectedSafeBase()?.fifty === 0"
+          >
+            $50
+          </option>
+        </select>
+      </div>
+    </div>
+  </ng-template>
   <app-button type="submit" class="mt-3" [loading]="loading()"
     >{{ receive() ? "Recibir" : "Entregar" }} Transferencia</app-button
   >
