--- a/src/app/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -68,75 +68,86 @@
     <div class="grid grid-cols-3 gap-3">
       <div class="control col-span-1">
         <label for="safeAmount">Cantidad</label>
-        <input type="number" id="safeAmount" class="input" placeholder="0" />
+        <input
+          type="number"
+          id="safeAmount"
+          class="input"
+          placeholder="0"
+          formControlName="safeAmount"
+        />
       </div>
       <div class="control col-span-2">
-        <label for="value">Valor</label>
-        <select id="value" class="input" formControlName="safeValue">
+        <label for="safeDenomination">Valor</label>
+        <select
+          id="safeDenomination"
+          class="input"
+          formControlName="safeDenomination"
+          (change)="setAvailableAmount()"
+        >
           <option value="" disabled selected>Denominación</option>
           <option
             value="hundredThousand"
-            [disabled]="receive() && selectedSafeBase()?.hundredThousand === 0"
+            [disabled]="receive() && selectedSafeBase?.hundredThousand === 0"
           >
             $100.000
           </option>
           <option
             value="fiftyThousand"
-            [disabled]="receive() && selectedSafeBase()?.fiftyThousand === 0"
+            [disabled]="receive() && selectedSafeBase?.fiftyThousand === 0"
           >
             $50.000
           </option>
           <option
             value="twentyThousand"
-            [disabled]="receive() && selectedSafeBase()?.twentyThousand === 0"
+            [disabled]="receive() && selectedSafeBase?.twentyThousand === 0"
           >
             $20.000
           </option>
           <option
             value="tenThousand"
-            [disabled]="receive() && selectedSafeBase()?.tenThousand === 0"
+            [disabled]="receive() && selectedSafeBase?.tenThousand === 0"
           >
             $10.000
           </option>
           <option
             value="fiveThousand"
-            [disabled]="receive() && selectedSafeBase()?.fiveThousand === 0"
+            [disabled]="receive() && selectedSafeBase?.fiveThousand === 0"
           >
             $5.000
           </option>
           <option
             value="twoThousand"
-            [disabled]="receive() && selectedSafeBase()?.twoThousand === 0"
+            [disabled]="receive() && selectedSafeBase?.twoThousand === 0"
           >
             $2.000
           </option>
           <option
             value="thousand"
-            [disabled]="receive() && selectedSafeBase()?.thousand === 0"
+            [disabled]="receive() && selectedSafeBase?.thousand === 0"
           >
             $1.000
           </option>
           <option
             value="fiveHundred"
-            [disabled]="receive() && selectedSafeBase()?.fiveHundred === 0"
+            [disabled]="receive() && selectedSafeBase?.fiveHundred === 0"
           >
             $500
           </option>
           <option
             value="twoHundred"
-            [disabled]="receive() && selectedSafeBase()?.twoHundred === 0"
+            [disabled]="receive() && selectedSafeBase?.twoHundred === 0"
           >
             $200
           </option>
           <option
             value="thousand"
-            [disabled]="receive() && selectedSafeBase()?.thousand === 0"
+            [disabled]="receive() && selectedSafeBase?.thousand === 0"
           >
             $100
           </option>
           <option
             value="fifty"
-            [disabled]="receive() && selectedSafeBase()?.fifty === 0"
+            [disabled]="receive() && selectedSafeBase?.fifty === 0"
           >
             $50
           </option>
@@ -144,7 +155,15 @@
       </div>
     </div>
   </ng-template>
-  <app-button type="submit" class="mt-3" [loading]="loading()"
+  <small
+    class="opacity-0 text-sm -my-2 font-medium text-gray-600 text-center"
+    [ngClass]="{
+      'opacity-100': selectedType() === 'SAFE',
+      'text-green-700': availableAmount() > 0
+    }"
+    >{{ selectedSafePropertyMessage() }}</small
+  >
+  <app-button type="submit" [loading]="loading()"
     >{{ receive() ? "Recibir" : "Entregar" }} Transferencia</app-button
   >
 </form>
