--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,6 +1,7 @@
 <ul class="flex items-center justify-center gap-3">
   <li
     class="flex items-center justify-center w-7 h-9 text-violet-700 text-lg text-center font-medium border-2 border-violet-700 rounded-lg cursor-pointer hover:scale-[1.02] transition-all"
+    (click)="emitDirectionOnSelectPage('left')"
   >
     <fa-icon [icon]="faLeft" size="xs" />
   </li>
@@ -8,6 +9,7 @@
     <select
       class="text-center w-28 h-9 border-violet-700 border-2 outline-none rounded-lg text-violet-700 text-lg font-medium cursor-pointer"
       (change)="emitOnSelectPage($event)"
+      [value]="pagination()?.currentPage"
     >
       <option *ngFor="let page of pages()" [value]="page">
         {{ page + 1 }}
@@ -16,6 +18,7 @@
   </li>
   <li
     class="flex items-center justify-center w-7 h-9 text-violet-700 text-lg text-center font-medium border-2 border-violet-700 rounded-lg cursor-pointer hover:scale-[1.02] transition-all"
+    (click)="emitDirectionOnSelectPage('right')"
   >
     <fa-icon [icon]="faRight" size="xs" />
   </li>
