--- a/src/app/portal/pages/home/components/home-table-section/home-table-section.component.html
+++ b/src/app/portal/pages/home/components/home-table-section/home-table-section.component.html
@@ -1,7 +1,8 @@
-<section class="card flex items-center justify-center h-[25rem]">
+<section class="card flex items-center justify-center h-96">
   <ng-template #spinner><app-spinner /></ng-template>
   <div
-    class="w-full h-full flex flex-col justify-between"
+    class="w-full h-full"
+    [ngClass]="{ 'flex flex-col justify-between': length >= 1 }"
     *ngIf="!loading(); else spinner"
   >
     <div>
