--- a/src/app/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/detailed-change-logs-table/detailed-change-logs-table.component.html
+++ b/src/app/admin/pages/movements/pages/cash-register-movements/pages/cash-register-details/components/detailed-change-logs-table/detailed-change-logs-table.component.html
@@ -2,4 +2,5 @@
 <app-detailed-change-logs
   *ngIf="selectedLog(); else tableData"
   [changeLog]="selectedLog()"
+  (onReturn)="selectedLog.set(undefined)"
 />
