--- a/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
@@ -1,1 +1,25 @@
-<p>bank-deposits works!</p>
+<header
+  class="flex items-center justify-between border-b border-violet-300 pb-7 px-5"
+>
+  <h2 class="text-2xl text-violet-950 font-medium uppercase">
+    Depósitos Bancarios
+  </h2>
+
+  <app-icon-button type="button" [icon]="faAdd">Nuevo depósito</app-icon-button>
+</header>
+<div class="px-5 py-7">
+  <section class="px-7 py-5 max-w-md border-2 border-violet-300 rounded-xl">
+    <h3 class="home-subtitle">Listado de depósitos</h3>
+    <ul class="flex flex-col gap-7 mt-4 max-h-96 p-1 overflow-y-auto">
+      <li>
+        <app-bank-deposit-item />
+      </li>
+      <li>
+        <app-bank-deposit-item />
+      </li>
+      <li>
+        <app-bank-deposit-item />
+      </li>
+    </ul>
+  </section>
+</div>
