update: expenses model

--- a/src/app/portal/pages/home/pages/expenses/components/new-expense-form/new-expense-form.component.html
+++ b/src/app/portal/pages/home/pages/expenses/components/new-expense-form/new-expense-form.component.html
@@ -31,5 +31,9 @@
       (Será descontado de su nómina)
     </small>
   </div>
+  <label class="text-gray-800 font-medium">
+    <input type="checkbox" formControlName="administrative" />
+    Administrativo
+  </label>
   <app-button type="submit" [loading]="loading()">Registrar Gasto</app-button>
 </form>
