--- a/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
@@ -11,14 +11,8 @@
   <section class="px-7 py-5 max-w-md border-2 border-violet-300 rounded-xl">
     <h3 class="home-subtitle">Listado de depósitos</h3>
     <ul class="flex flex-col gap-7 mt-4 max-h-[22.5rem] p-1 overflow-y-auto">
-      <li>
-        <app-bank-deposit-item />
-      </li>
-      <li>
-        <app-bank-deposit-item />
-      </li>
-      <li>
-        <app-bank-deposit-item />
+      <li *ngFor="let bankDeposit of bankDeposits()">
+        <app-bank-deposit-item [bankDeposit]="bankDeposit" />
       </li>
     </ul>
   </section>
