--- a/src/app/portal/pages/home/pages/bank-deposits/components/new-bank-deposit-form/new-bank-deposit-form.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/components/new-bank-deposit-form/new-bank-deposit-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
+<form [formGroup]="form" (ngSubmit)="emitOnSubmit()">
   <fieldset class="form px-5 py-4 border border-violet-300 rounded-xl">
     <legend class="text-gray-700 text-xl font-medium px-2">
       Nuevo depósito
