--- a/src/app/portal/pages/home/pages/bank-deposits/components/bank-deposit-item/bank-deposit-item.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/components/bank-deposit-item/bank-deposit-item.component.html
@@ -20,7 +20,7 @@
   <p class="text-gray-700 flex items-center justify-between">
     Recaudado:
     <span class="text-gray-700 font-medium">{{
-      0 | currency : "symbol" : "$" : "0.00"
+      bankDeposit.totalCollected | currency : "symbol" : "$" : "0.00"
     }}</span>
   </p>
   <p class="text-gray-700 flex items-center justify-between">
