update: form label

--- a/src/app/portal/pages/home/pages/bank-deposits/components/new-bank-deposit-form/new-bank-deposit-form.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/components/new-bank-deposit-form/new-bank-deposit-form.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="grid grid-cols-2 gap-5">
       <div class="control">
-        <label for="expenseNote">Gasto</label>
+        <label for="expenseNote">Razón del gasto</label>
         <input
           type="text"
           id="expenseNote"
