update: bank deposits page styles

--- a/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
@@ -42,7 +42,7 @@
     *ngIf="bankDeposits().length > 0; else noBankDeposits"
     class="grid grid-cols-2 gap-12"
   >
-    <section class="px-7 py-5 border-2 border-violet-300 rounded-xl">
+    <section>
       <h3 class="home-subtitle">Listado de depósitos</h3>
       <ul
         class="flex flex-col gap-7 mt-4 max-h-[22.5rem] py-1 px-1.5 overflow-y-auto"
