--- a/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
@@ -44,9 +44,8 @@
   >
     <section>
       <h3 class="home-subtitle">Listado de depósitos</h3>
-      <ul
-        class="flex flex-col gap-7 mt-4 max-h-[22.5rem] py-1 px-1.5 overflow-y-auto"
-      >
+      <hr class="w-full border-gray-200 mt-3 mb-7" />
+      <ul class="flex flex-col gap-7 px-1.5">
         <li *ngFor="let bankDeposit of bankDeposits()">
           <app-bank-deposit-item
             [bankDeposit]="bankDeposit"
