--- a/src/app/portal/pages/home/pages/bank-deposits/components/bank-deposit-item/bank-deposit-item.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/components/bank-deposit-item/bank-deposit-item.component.html
@@ -5,8 +5,8 @@
     class="-mx-7 -my-5 rounded-t-xl py-2 mb-3"
     [ngClass]="{
       'bg-green-700 ': bankDeposit.status === 'OPEN',
-      'bg-stone-700': bankDeposit.status === 'IN_PROGRESS',
-      'bg-violet-700': bankDeposit.status === 'CLOSED'
+      'bg-violet-700': bankDeposit.status === 'IN_PROGRESS',
+      'bg-stone-700': bankDeposit.status === 'CLOSED'
     }"
   >
     <h4 class="text-green-50 text-xl font-medium text-center">
@@ -22,6 +22,10 @@
     <span class="text-gray-700 font-medium">{{
       bankDeposit.totalCollected | currency : "symbol" : "$" : "0.00"
     }}</span>
+  </p>
+  <p class="text-gray-700 flex items-center justify-between">
+    Abierto por:
+    <span class="text-gray-700 font-medium">{{ bankDeposit.openedBy }}</span>
   </p>
   <p class="text-gray-700 flex items-center justify-between">
     Hora:
