update: thrash button logic

--- a/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
@@ -82,6 +82,7 @@
                 }}</span>
               </p>
               <app-icon-button
+                *ngIf="selectedBankDeposit()?.status === 'OPEN'"
                 [icon]="faDelete"
                 type="button"
                 color="neutral"
