define: form for new bank deposit payments and link with bank deposits page

--- a/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/bank-deposits.component.html
@@ -90,6 +90,13 @@
             </div>
           </div>
         </ng-template>
+        <app-new-bank-deposit-payment-form
+          *ngIf="selectedBankDeposit()?.status === 'IN_PROGRESS'"
+          (onSubmit)="onNewBankDepositPayment()"
+          [platforms]="platforms()"
+          [form]="createPaymentForm"
+          [loading]="createPaymentLoading()"
+        />
         <app-bank-deposit-info-list
           headline="Aportantes"
           type="depositor"
