refactor: login -> auth

--- a/src/app/auth/pages/login/components/login-form/login-form.component.html
+++ b/src/app/auth/pages/login/components/login-form/login-form.component.html
@@ -25,7 +25,7 @@
     >Iniciar sesión</app-button
   >
   <a
-    href="#"
+    (click)="goToChangePassword()"
     class="text-center text-blue-500 text-base font-semibold hover:text-blue-400"
     >¿Haz olvidado tu contraseña?</a
   >
