--- a/src/app/admin/pages/home/pages/users/components/new-user-form/new-user-form.component.html
+++ b/src/app/admin/pages/home/pages/users/components/new-user-form/new-user-form.component.html
@@ -1,43 +1,15 @@
 <form class="form" [formGroup]="form" (ngSubmit)="emitOnComplete()">
   <div class="control">
     <label for="name">Nombre</label>
-    <input
-      type="text"
-      id="name"
-      [readOnly]="loading()"
-      formControlName="name"
-      class="input"
-    />
+    <input type="text" id="name" formControlName="name" class="input" />
   </div>
   <div class="control">
     <label for="lastName">Apellido(s)</label>
-    <input
-      type="text"
-      id="lastName"
-      [readOnly]="loading()"
-      formControlName="lastName"
-      class="input"
-    />
+    <input type="text" id="lastName" formControlName="lastName" class="input" />
   </div>
   <div class="control">
-    <label for="password">Contraseña</label>
-    <input
-      type="password"
-      id="password"
-      [readOnly]="loading()"
-      formControlName="password"
-      class="input"
-    />
-  </div>
-  <div class="control">
-    <label for="repeatPassword">Confirma la contraseña</label>
-    <input
-      type="password"
-      id="repeatPassword"
-      [readOnly]="loading()"
-      formControlName="repeatPassword"
-      class="input"
-    />
+    <label for="email">Correo electrónico</label>
+    <input type="email" id="email" formControlName="email" class="input" />
   </div>
   <div class="control">
     <label for="role">Rol de usuario</label>
