--- a/src/app/shared/components/custom-table/custom-table.component.html
+++ b/src/app/shared/components/custom-table/custom-table.component.html
@@ -12,7 +12,7 @@
         <th
           scope="col"
           *ngFor="let header of table.header"
-          class="text-gray-800 text-sm px-5 py-2 uppercase"
+          class="text-gray-800 text-sm px-5 py-2 uppercase text-nowrap"
           [ngClass]="{
             'text-left': !header.align,
             'text-center': header.align === 'center',
